network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Serverless Infrastructure - Core Components Only'

Parameters:
  DBInstanceID:
    Type: String
    Default: lks-rds-orders
  DBName:
    Type: String
    Default: ordersdb
  DBInstanceClass:
    Type: String
    Default: db.t3.micro
  DBAllocatedStorage:
    Type: Number
    Default: 20
  DBUsername:
    Type: String
    Default: dbadmin
  DBPassword:
    Type: String
    NoEcho: true
    Default: TechnoCloud2026!
  LabRoleArn:
    Type: String
    Default: arn:aws:iam::111122223333:role/LabRole

Resources:

  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 20.1.0.0/20
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: lks-vpc-serverless

  ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref myVPC
      AmazonProvidedIpv6CidrBlock: true

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.0.0/25
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: lks-public-subnet-2a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.1.0/25
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: lks-public-subnet-2b

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.11.0/25
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: lks-private-subnet-2a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.12.0/25
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: lks-private-subnet-2b

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: lks-igw

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref myVPC

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: lks-nat-gateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteIPv6:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationIpv6CidrBlock: "::/0"
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  SGAppsLambda:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security for lambda function
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: lks-sg-lambda

  SGAppsRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security for RDS
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref SGAppsLambda
      Tags:
        - Key: Name
          Value: lks-sg-rds

  SGAppsVPC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: security for vpc endpoint
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 20.1.0.0/20
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 20.1.0.0/20
      Tags:
        - Key: Name
          Value: lks-sg-vpc-endpoint

  S3EndpointVPC:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref myVPC
      ServiceName: com.amazonaws.us-east-1.s3
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRouteTable
      Tags:
        - Key: Name
          Value: lks-s3-endpoints

  SNSEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref myVPC
      ServiceName: com.amazonaws.us-east-1.sns
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref SGAppsVPC
      PrivateDnsEnabled: true
      Tags:
        - Key: Name
          Value: lks-sns-endpoints

Outputs:
  PrivateSubnet1Id:
    Value: !Ref PrivateSubnet1
    Export:
      Name: LKS-PrivateSubnet1
  PrivateSubnet2Id:
    Value: !Ref PrivateSubnet2
    Export:
      Name: LKS-PrivateSubnet2
  RDSecurityGroupId:
    Value: !Ref SGAppsRDS
    Export:
      Name: LKS-RDS-SG
