vpc1.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Serverless event driver'

Parameters:
  EnvironmentName:
    Type: String
    Default: lks-
  DBInstanceID:
    Type: String
    Default: lks-rds-orders
  DBName:
    Type: String
    Default: ordersdb 
  DBInstanceClass:
    Type: String
    Default: db.t3.micro
  DBAllocatedStorage:
    Type: Number
    Default: 20
  DBUsername:
    Type: String
    Default: dbadmin
  DBPassword:
    Type: String
    NoEcho: true
    Default: TechnoClouds2026!

Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 20.1.0.0/20
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: 
        - Key: "Name"
          Value: "lks-vpc-serverless"

  ipv6CidrBlock:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId: !Ref myVPC
      AmazonProvidedIpv6CidrBlock: true

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.0.0/25
      AvailabilityZone: 'us-east-1a'
      Tags:
        - Key: Name
          Value: "public-subnet-2a"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.1.0/25
      AvailabilityZone: 'us-east-1b'
      Tags:
        - Key: Name
          Value: "public-subnet-2b"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.11.0/25
      AvailabilityZone: 'us-east-1a'
      Tags:
        - Key: Name
          Value: "private-subnet-2a"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: 20.1.12.0/25
      AvailabilityZone: 'us-east-1b'
      Tags:
        - Key: Name
          Value: "private-subnet-2"

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags: 
        - Key: Stack
          Value: InternetGateway

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: stack
          Value: production

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref myVPC

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteIPv6:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationIpv6CidrBlock: ::/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  SGAppsLambda:
    Type: AWS::Lambda::SecurityGroup
    Properties:
      GroupDescription: Security Group for Lambda
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: lks-sg-lambda

  SGAppsRDS:
    Type: AWS::RDS::SecurityGroup
    Properties:
      GroupDescription: Security Group for RDS
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref SGAppsLambda
          ToPort: 5432
      Tags:
        - Key: Name
          Value: lks-sg-rds

  SGAppsVPC:
    Type: AWS::VPC::SecurityGroup
    Properties:
      GroupDescription: Security Group for VPC endpoints
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref SGAppsLambda
          ToPort: 5432
          CidrIp: 20.1.0.0/20
      Tags:
        - Key: Name
          Value: lks-sg-vpc-endpoint

  DBSubnetGroupRDS:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  RDS:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: !Ref DBInstanceID
      DBName: !Ref DBName
      DBInstanceClass: !Ref DBInstanceClass
      AllocatedStorage: !Ref DBAllocatedStorage
      Engine: PostgreSQL
      EngineVersion: "15.0"
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !Ref SGAppsRDS
      DBSubnetGroupName: !Ref DBSubnetGroupRDS
      MonitoringInterval: 0
      PubliclyAccessible: false
      MultiAZ: false
      StorageType: gp3
      Tags:
        - Key: Name
          Value: 'lks-rds-orders'

  S3Orders:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    Properties:
      BucketName: 'lks-orders-adelya-2026'
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerPreferred
      VersioningConfiguration:
        Status: Enabled
      LifecycleConfiguration:
        Rules:
          - Id: ArchiveAndExpire
            Status: Enabled
            Transitions:
              - TransitionInDays: 30
                StorageClass: GLACIER
            ExpirationInDays: 90
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false
      Tags:
        - Key: Name
          Value: lks-orders-adelya-2026

  S3Logs:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    Properties:
      BucketName: 'lks-logs-adelya-2026'
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerPreferred
      VersioningConfiguration:
        Status: Enabled
      LifecycleConfiguration:
        Rules:
          - Id: ArchiveAndExpire
            Status: Enabled
            Transitions:
              - TransitionInDays: 7
                StorageClass: GLACIER
            ExpirationInDays: 90
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false
      Tags:
        - Key: Name
          Value: lks-logs-adelya-2026

  BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: '*'
            Action: 
              - 's3:GetObject'
            Resource: !Sub 'arn:aws:s3:::${S3}/*'

  Function:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.handler
      Role: arn:aws:iam::111122223333:role/lambda-role
      Code:
        S3Bucket: !Ref S3Orders
      Runtime: Python 3.11
      Timeout: 30
      TracingConfig:
        Mode: Active
      VpcConfig:
        SecurityGroupIds:
          - !Ref SGAppsLambda
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
